# pcrunner

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .travis.yml  HISTORY.rst  MANIFEST.in  Makefile  README.rst  pcrunner.spec  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
docs/: conf.py  index.rst  installation.rst  usage.rst
pcrunner/: __init__.py  configuration.py  daemon.py  exception.py  main.py  windows_service.py
scripts/: check_dummy.py  pcr.py  run_check.py
src/pcrunner/: __init__.py  main.py  version.py
systemd/: pcrunner.service
tests/: test_configuration.py  test_main.py
