[bumpversion]
current_version = 0.2.8
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:pcrunner/__init__.py]
search = version {current_version}
replace = version {new_version}

[bumpversion:file:pcrunner.spec]
search = version {current_version}
replace = version {new_version}

[bumpversion:file:docs/installation.rst]
search = pcrunner-{current_version}
replace = pcrunner-{new_version}

[wheel]
universal = 1

[flake8]
exclude = docs

[metadata]
description-file = README.rst

