# vim: ai et ts=2 sw=2 sts=2 fileencoding=utf-8 ft=cfg
# coding: utf-8

[bumpversion]
current_version = 0.3.11
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:pcrunner/__init__.py]
search = version {current_version}
replace = version {new_version}

[bumpversion:file:pcrunner.spec]
search = version {current_version}
replace = version {new_version}

[bumpversion:file:docs/installation.rst]
search = {current_version}
replace = {new_version}

[wheel]
universal = 1

[flake8]
exclude = docs

[metadata]
description-file = README.rst

